styles/globals.css
@font-face {
  font-family: "Hack Regular";
  src:
    /* local("Hack"), */
    url("../fonts/Hack/hacknerdfont-regular.ttf")
}

:root {
  --background: #2a2a3b;
  --primary: #f1f1f1;
  --secondary: #969696;
  --accent: #fa4d4d;
  --radius: 0px;
}

body {
  background-color: var(--background);
  color: var(--primary);
  font-family: "Hack Regular", monospace;
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-top: solid thin;
  border-color: #888888;
  color: #888888;
  bottom: 0;
  width: 100%;
  padding: 15px 0;
  font-size: 0.8rem;
  margin-top: 150px;
}

a {
  color: var(--primary);
}

footer p {
  margin: 0;
}

/* in-text links */
p a {
  text-decoration: underline;
  color: var(--primary);
}

.bordered {
  border: solid 2px;
  border-radius: var(--radius);
  padding: 0 16px;
}

.mainHeader {
  display: flex;
  align-items: center;
}

.minorHeader {
  z-index: 2;
  position: absolute;
  left: 15px;
  top: 4px;
  display: flex;
  align-items: center;
  font-size: 0.5rem;
}

.secondaryText {
  color: var(--secondary);
}

.icon {
  color: var(--primary);
}

.textContainer {
  width: 64%;
  margin: 0 auto;
  font-size: 1.1rem;
}

.contentContainer {
  width: 63%;
  margin: 20px auto;
  padding: 20px 20px;
  font-size: 1.1rem;
  display: flex;
  flex-direction: column;
  line-height: 1.3rem;
}

.aboutContent {
  line-height:1.3;
  width: 64%;
  margin: 0 auto;
  font-size: 1.1rem;
}

.aboutContent h2{
  margin-top: 30px;
  margin-bottom: 8px;
}

.image {
  width: 60%;
  height: auto;
  margin-top: 20px;
  padding: 0;
  margin: 0 auto 20px auto;
  align-self: center;
}

.videoGrid {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.gridElement {
  padding: 20px;
}

.musicVideo {
  width: 100%;
  aspect-ratio: 16/9;
  padding: 0;
}

.filmVideo {
  align-self: center;
  width: 70%;
  aspect-ratio: 16/9;
  padding: 0;
  margin-bottom: 16px;
}

.gridImage {
  width: 100%;
  height: auto;
  padding: 0;
  align-self: center;
}

.photoGrid {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  padding-bottom: 22px;
  border-bottom: solid 2px;
  margin-bottom: 40px;
}

.hline {
  width: 100%;
  align-self: center;
  border-bottom: solid 2px;
  margin: 0 10px;
}

.photoAlbumHeader {
  display:flex; 
  align-items: center;
}

.photoAlbumHeader h2 {
  margin: 4px 0;
  white-space: nowrap;
}

.contentText {
  margin: 4px 0;
}

.hoverText {
  color: var(--background)
}

.hoverTextSub {
  color: var(--background)
}

.ghostText {
  color: var(--background)
}

#logo {
  margin: 0 auto;
}

#logo a {
  color: var(--primary);
  text-decoration: none;
}

